@@ -327,5 +327,4 @@ public class UpdateMailAccountBuilder implements AttributeSwitch {
     public Object addresses() {
         return null;
     }
-
 }
