@@ -49,15 +49,14 @@
 
 package com.openexchange.smtp.config;
 
-import static com.openexchange.java.Strings.isEmpty;
 import java.net.URI;
 import java.net.URISyntaxException;
 import javax.mail.internet.idn.IDNA;
 import com.openexchange.exception.OXException;
+import com.openexchange.java.Strings;
 import com.openexchange.mail.api.MailCapabilities;
 import com.openexchange.mail.transport.config.ITransportProperties;
 import com.openexchange.mail.transport.config.TransportConfig;
-import com.openexchange.mail.utils.MailPasswordUtil;
 import com.openexchange.mailaccount.MailAccount;
 import com.openexchange.session.Session;
 import com.openexchange.smtp.SMTPExceptionCode;
@@ -164,16 +163,21 @@ public final class SMTPConfig extends TransportConfig {
         this.transportProperties = (ISMTPProperties) transportProperties;
     }
 
+    /**
+     * {@inheritDoc}
+     */
     @Override
     protected boolean doCustomParsing(MailAccount account, Session session) throws OXException {
         if (!account.isDefaultAccount()) {
-            {
-                final String transportLogin = account.getTransportLogin();
-                login = isEmpty(transportLogin) ? account.getLogin() : transportLogin;
-            }
-            {
-                final String transportPassword = account.getTransportPassword();
-                password = MailPasswordUtil.decrypt(isEmpty(transportPassword) ? account.getPassword() : transportPassword, session, account.getId(), login, account.getTransportServer());
+            login = account.getLogin();
+            password = account.getPassword();
+
+            String auth = account.getTransportProperties().get("transport_auth");
+            if (Boolean.parseBoolean(auth)) {
+                if (!Strings.isEmpty(account.getTransportLogin()) && !Strings.isEmpty(account.getTransportPassword())) {
+                    login = account.getTransportLogin();
+                    password = account.getTransportPassword();
+                }
             }
             return true;
         }
